--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.yandex.android:maps.mobile:4.0.0-lite'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
