--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
     implementation 'org.apache.lucene:lucene-spatial:8.2.0'
+    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.6'
 }
